<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_item">

    <TextView
        android:id="@+id/main_store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_store_name"
        android:textSize="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/main_store_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/main_store_tel"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_store_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/main_store_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_store_lat"
        android:textSize="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/main_store_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/main_store_lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_store_lng"
        android:textSize="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/main_store_lat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>